# ni-media

./: .gitbugtraq  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/ni/media/: AiffFileSource.cpp  AiffFileSource.h  AudioFileSource.h  AudioStreamInfo.h  CAFFileDescription.h  CAFFileSource.cpp  CAFFileSource.h  MP4FileSource.cpp  MP4FileSource.h  Mp4FileSource.h  WAVChunks.h  WavFileSource.cpp  WavFileSource.h  WmaFileSource.cpp  WmaFileSource.h
source/ni/media/alac/: CMakeLists.txt
source/ni/media/alac/codec/: ALACDecoder.cpp  ALACEncoder.cpp  ag_dec.c  ag_enc.c  dp_dec.c  dp_enc.c
source/ni/media/core_audio/: CoreAudioFileSource.cpp  CoreAudioFileSource.h
source/ni/media/impl/: MP4FileSourceMac.cpp  MP4FileSourceMac.h  MP4FileSourceWin.cpp  MP4FileSourceWin.h
source/ni/media/media_foundation/: MfFileSource.cpp  MfFileSource.h
source/ni/media/pcm/: PcmConverter.h  PcmFormat.h  PcmIterator.h  PcmTraits.h  converter.h  format.h  iterator.h  traits.h
source/ni/media/pcm/range/: converted.h
test/: CMakeLists.txt  main.cpp
test/ni/media/pcm/: PcmConverter.test.cpp  PcmHelper.h  PcmIterator.test.cpp  PcmTestTypes.h  converter.test.cpp  iterator.test.cpp
